--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,9 +1,5 @@
-doctype html
-html(lang='en')
-  head
-    meta(charset='UTF-8')
-    title
-  body
-    header
-      nav
-        a(href='/new')
+extends layout.pug
+
+block content
+
+block scripts
