--- a/app/views/login.pug
+++ b/app/views/login.pug
@@ -1,9 +1,9 @@
 extends layout.pug
 
 block content
-  form(action='/new', method='POST')
+  form(action='/login', method='POST')
     div
-      input(type='text', name='username')
+      input(type='text', name='name')
     div
       input(type='password', name='password')
     div
