--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -1,8 +1,8 @@
 extends layout.pug
 
 block content
-  each scrap in scraps
+  each file in files
     div
-      a(href=`scraps/${scrap.id}`)!= scrap.title
+      a(href=`scraps/${session.user.id}/${file}`)!= file
 
 block scripts
