--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -3,23 +3,41 @@ html(lang='en')
   head
     meta(charset='UTF-8')
     title
+    link(
+      rel='stylesheet',
+      href='https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css',
+      integrity='sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB',
+      crossorigin='anonymous'
+    )
+    script(
+      src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js',
+      integrity='sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T',
+      crossorigin='anonymous'
+    )
   body
     header
-      nav
-        if session.user
-          a(href='/') Top
-          a(href='/new') New Scrap
-          a(href='/logout') Logout
-        else
-          a(href='/login') Login
-          a(href='/register') Register
+      nav.navbar.navbar-dark.bg-dark.navbar-expand-lg
+        ul.navbar-nav.mr-auto
+          if session.user
+            li.nav-item
+              a.nav-link(href='/') Top
+            li.nav-item
+              a.nav-link(href='/new') New Scrap
+            li.nav-item
+              a.nav-link(href='/logout') Logout
+          else
+            li.nav-item
+              a.nav-link(href='/login') Login
+            li.nav-item
+              a.nav-link(href='/register') Register
 
     if errors
       div.errors
         each error in errors
           p!= error
 
-    div
-      block content
+    main.py-5.bg-light(role='main')
+      div.container
+        block content
 
     block scripts
