--- a/app/views/register.pug
+++ b/app/views/register.pug
@@ -1,12 +1,12 @@
 extends layout.pug
 
 block content
-  form(action='/register', method='POST')
-    div
-      input(type='text', name='name')
-    div
-      input(type='password', name='password')
-    div
-      input(type='submit', value='Register')
+  form.form-signin(action='/register', method='POST')
+    div.mb-3
+      input.form-control(type='text', name='name', placeholder='Name')
+    div.mb-3
+      input.form-control(type='password', name='password', placeholder='Password')
+    div.mb-3
+      button.btn.btn-lg.btn-primary.btn-block(type='submit') Register
 
 block scripts
