--- a/app/views/layout.pug
+++ b/app/views/layout.pug
@@ -9,6 +9,10 @@ html(lang='en')
       integrity='sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB',
       crossorigin='anonymous'
     )
+    link(
+      rel='stylesheet',
+      href='/static/app.css'
+    )
     script(
       src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js',
       integrity='sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T',
