--- a/app/views/new.pug
+++ b/app/views/new.pug
@@ -1,12 +1,12 @@
 extends layout.pug
 
 block content
-  form(action='/new', method='POST')
-    div
-      input(type='text', name='title')
-    div
-      textarea(name='body')
-    div
-      input(type='submit', value='Submit')
+  form.form-signin(action='/new', method='POST')
+    div.mb-3
+      input.form-control(type='text', name='title', placeholder='Title')
+    div.mb-3
+      textarea.form-control(type='text', name='body', placeholder='Body', rows=10)
+    div.mb-3
+      button.btn.btn-lg.btn-primary.btn-block(type='submit') Create
 
 block scripts
