move js to javascripts/

--- a/app/views/scrap.pug
+++ b/app/views/scrap.pug
@@ -20,9 +20,9 @@ block content
         button.btn.btn-lg.btn-primary.btn-block(type='submit') Edit
 
 block scripts
-  script(src='/static/config.js')
-  script(src='/static/load-scrap.js')
-  script(src='/static/edit-scrap.js')
-  script(src='/static/report-scrap.js')
-  <!-- auto report feature is disabled now -->
-  <!-- script(src='/static/auto-report.js') -->
+  script(src='/static/javascripts/load-scrap.js')
+  script(src='/static/javascripts/edit-scrap.js')
+  script(src='/static/javascripts/config.js')
+  script(src='/static/javascripts/report-scrap.js')
+  // auto report feature is disabled now
+  // script(src='/static/auto-report.js')
