--- a/app/views/scrap.pug
+++ b/app/views/scrap.pug
@@ -25,4 +25,4 @@ block scripts
   script(src='/static/javascripts/config.js')
   script(src='/static/javascripts/report-scrap.js')
   // auto report feature is disabled now
-  // script(src='/static/auto-report.js')
+  // script(src='/static/javascripts/watch-scrap-body-and-report-automatically-with-banword.js')
