fixed some bugs

--- a/app/views/scrap.pug
+++ b/app/views/scrap.pug
@@ -6,7 +6,7 @@ block content
     nav.scrap-header
       ul
         li
-          a(href=`/static/raw/${user.id}/${title}`) Raw
+          a(href=`/static/raw/${user.uid}/${title}`) Raw
         li
           a(href='#', class='edit-scrap') Edit
         li
